@@ -19,15 +19,17 @@
 
 package net.sourceforge.peers.rtp;
 
-import net.sourceforge.peers.Logger;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.lang.invoke.MethodHandles;
 
 // RFC 3550
 public class RtpParser {
 
-    private Logger logger;
+    private static final Logger logger = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-    public RtpParser(Logger logger) {
-        this.logger = logger;
+    public RtpParser() {
     }
 
     public RtpPacket decode(byte[] packet) {
@@ -36,32 +38,32 @@ public class RtpParser {
             return null;
         }
         RtpPacket rtpPacket = new RtpPacket();
-        int b = (int)(packet[0] & 0xff);
+        int b = (int) (packet[0] & 0xff);
         rtpPacket.setVersion((b & 0xc0) >> 6);
         rtpPacket.setPadding((b & 0x20) != 0);
         rtpPacket.setExtension((b & 0x10) != 0);
         rtpPacket.setCsrcCount(b & 0x0f);
-        b = (int)(packet[1] & 0xff);
+        b = (int) (packet[1] & 0xff);
         rtpPacket.setMarker((b & 0x80) != 0);
         rtpPacket.setPayloadType(b & 0x7f);
-        b = (int)(packet[2] & 0xff);
-        rtpPacket.setSequenceNumber(b * 256 + (int)(packet[3] & 0xff));
-        b = (int)(packet[4] & 0xff);
+        b = (int) (packet[2] & 0xff);
+        rtpPacket.setSequenceNumber(b * 256 + (int) (packet[3] & 0xff));
+        b = (int) (packet[4] & 0xff);
         rtpPacket.setTimestamp(b * 256 * 256 * 256
-                + (int)(packet[5] & 0xff) * 256 * 256
-                + (int)(packet[6] & 0xff) * 256
-                + (int)(packet[7] & 0xff));
-        b = (int)(packet[8] & 0xff);
+                + (int) (packet[5] & 0xff) * 256 * 256
+                + (int) (packet[6] & 0xff) * 256
+                + (int) (packet[7] & 0xff));
+        b = (int) (packet[8] & 0xff);
         rtpPacket.setSsrc(b * 256 * 256 * 256
-                + (int)(packet[9] & 0xff) * 256 * 256
-                + (int)(packet[10] & 0xff) * 256
-                + (int)(packet[11] & 0xff));
+                + (int) (packet[9] & 0xff) * 256 * 256
+                + (int) (packet[10] & 0xff) * 256
+                + (int) (packet[11] & 0xff));
         long[] csrcList = new long[rtpPacket.getCsrcCount()];
         for (int i = 0; i < csrcList.length; ++i)
-            csrcList[i] = (int)(packet[12 + i] & 0xff) << 24
-                + (int)(packet[12 + i + 1] & 0xff) << 16
-                + (int)(packet[12 + i + 2] & 0xff) << 8
-                + (int)(packet[12 + i + 3] & 0xff);
+            csrcList[i] = (int) (packet[12 + i] & 0xff) << 24
+                    + (int) (packet[12 + i + 1] & 0xff) << 16
+                    + (int) (packet[12 + i + 2] & 0xff) << 8
+                    + (int) (packet[12 + i + 3] & 0xff);
         rtpPacket.setCsrcList(csrcList);
         int dataOffset = 12 + csrcList.length * 4;
         int dataLength = packet.length - dataOffset;
@@ -76,45 +78,44 @@ public class RtpParser {
         int packetLength = 12 + rtpPacket.getCsrcCount() * 4 + data.length;
         byte[] packet = new byte[packetLength];
         int b = (rtpPacket.getVersion() << 6)
-            + ((rtpPacket.isPadding() ? 1 : 0) << 5)
-            + ((rtpPacket.isExtension() ? 1 : 0) << 4)
-            + (rtpPacket.getCsrcCount());
-        packet[0] = new Integer(b).byteValue();
+                + ((rtpPacket.isPadding() ? 1 : 0) << 5)
+                + ((rtpPacket.isExtension() ? 1 : 0) << 4)
+                + (rtpPacket.getCsrcCount());
+        packet[0] = Integer.valueOf(b).byteValue();
         b = ((rtpPacket.isMarker() ? 1 : 0) << 7)
-            + rtpPacket.getPayloadType();
-        packet[1] = new Integer(b).byteValue();
+                + rtpPacket.getPayloadType();
+        packet[1] = Integer.valueOf(b).byteValue();
         b = rtpPacket.getSequenceNumber() >> 8;
-        packet[2] = new Integer(b).byteValue();
+        packet[2] = Integer.valueOf(b).byteValue();
         b = rtpPacket.getSequenceNumber() & 0xff;
-        packet[3] = new Integer(b).byteValue();
-        b = (int)(rtpPacket.getTimestamp() >> 24);
-        packet[4] = new Integer(b).byteValue();
-        b = (int)(rtpPacket.getTimestamp() >> 16);
-        packet[5] = new Integer(b).byteValue();
-        b = (int)(rtpPacket.getTimestamp() >> 8);
-        packet[6] = new Integer(b).byteValue();
-        b = (int)(rtpPacket.getTimestamp() & 0xff);
-        packet[7] = new Integer(b).byteValue();
-        b = (int)(rtpPacket.getSsrc() >> 24);
-        packet[8] = new Integer(b).byteValue();
-        b = (int)(rtpPacket.getSsrc() >> 16);
-        packet[9] = new Integer(b).byteValue();
-        b = (int)(rtpPacket.getSsrc() >> 8);
-        packet[10] = new Integer(b).byteValue();
-        b = (int)(rtpPacket.getSsrc() & 0xff);
-        packet[11] = new Integer(b).byteValue();
+        packet[3] = Integer.valueOf(b).byteValue();
+        b = (int) (rtpPacket.getTimestamp() >> 24);
+        packet[4] = Integer.valueOf(b).byteValue();
+        b = (int) (rtpPacket.getTimestamp() >> 16);
+        packet[5] = Integer.valueOf(b).byteValue();
+        b = (int) (rtpPacket.getTimestamp() >> 8);
+        packet[6] = Integer.valueOf(b).byteValue();
+        b = (int) (rtpPacket.getTimestamp() & 0xff);
+        packet[7] = Integer.valueOf(b).byteValue();
+        b = (int) (rtpPacket.getSsrc() >> 24);
+        packet[8] = Integer.valueOf(b).byteValue();
+        b = (int) (rtpPacket.getSsrc() >> 16);
+        packet[9] = Integer.valueOf(b).byteValue();
+        b = (int) (rtpPacket.getSsrc() >> 8);
+        packet[10] = Integer.valueOf(b).byteValue();
+        b = (int) (rtpPacket.getSsrc() & 0xff);
+        packet[11] = Integer.valueOf(b).byteValue();
         for (int i = 0; i < rtpPacket.getCsrcCount(); ++i) {
-            b = (int)(rtpPacket.getCsrcList()[i] >> 24);
-            packet[12 + i * 4] = new Integer(b).byteValue();
-            b = (int)(rtpPacket.getCsrcList()[i] >> 16);
-            packet[12 + i * 4 + 1] = new Integer(b).byteValue();
-            b = (int)(rtpPacket.getCsrcList()[i] >> 8);
-            packet[12 + i * 4 + 2] = new Integer(b).byteValue();
-            b = (int)(rtpPacket.getCsrcList()[i] & 0xff);
-            packet[12 + i * 4 + 3] = new Integer(b).byteValue();
+            b = (int) (rtpPacket.getCsrcList()[i] >> 24);
+            packet[12 + i * 4] = Integer.valueOf(b).byteValue();
+            b = (int) (rtpPacket.getCsrcList()[i] >> 16);
+            packet[12 + i * 4 + 1] = Integer.valueOf(b).byteValue();
+            b = (int) (rtpPacket.getCsrcList()[i] >> 8);
+            packet[12 + i * 4 + 2] = Integer.valueOf(b).byteValue();
+            b = (int) (rtpPacket.getCsrcList()[i] & 0xff);
+            packet[12 + i * 4 + 3] = Integer.valueOf(b).byteValue();
         }
-        System.arraycopy(data, 0, packet, 12 + rtpPacket.getCsrcCount() * 4,
-                data.length);
+        System.arraycopy(data, 0, packet, 12 + rtpPacket.getCsrcCount() * 4, data.length);
         return packet;
     }
 
